# openhaystack

./: .gitignore  .gitmodules  .pre-commit  CITATION.cff  HCI.py  Makefile  README.Reproducibility.md  README.md  build.md
.github/ISSUE_TEMPLATE/: bug_report.md  general-question.md
.github/actions/build-esp-idf/: action.yaml
.github/workflows/: build-app.yml  build-cve-2020-9986.yaml  build-firmware-esp32.yaml  build-firmware.yaml  release.yml
CVE-2020-9986/OFReadKeys/: .swiftlint.yml
CVE-2020-9986/OFReadKeys/OFFetchReports/: AppDelegate.swift  ContentView.swift  Info.plist  MapView.swift  MapViewController.swift  MapViewController.xib  OFFetchReports.entitlements  OFFetchReportsMainView.swift  SavePanel.swift
CVE-2020-9986/OFReadKeys/OFReadKeys/: AppDelegate.swift  ContentView.swift  FindMyKeyExtractor.swift  FindMyModels.swift  Info.plist  OFReadKeys.entitlements  SavePanel.swift
CVE-2020-9986/OFReadKeys/OFReadKeys.xcodeproj/: project.pbxproj
Firmware/: LICENSE  README.md
Firmware/ESP32/: .gitignore  CMakeLists.txt  Makefile  README.md  flash_esp32.sh  partitions.csv  sdkconfig
Firmware/ESP32/main/: CMakeLists.txt  openhaystack_main.c
Firmware/Linux_HCI/: HCI.py  README.md
Firmware/Microbit_v1/: .gitignore  Makefile
Firmware/Microbit_v1/offline-finding/: main.c
Firmware/Microbit_v2/: .clang-format  .gitignore  .yotta_ignore  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.py  codal.json  module.json
Firmware/Microbit_v2/source/: main.cpp
Firmware/Microbit_v2/utils/: esptool.py  generate_libraries.py  merge_hex.py  targets.json  uf2conv.py
Firmware/Microbit_v2/utils/cmake/: JSONParser.cmake  colours.cmake  util.cmake
Firmware/Microbit_v2/utils/cmake/buildtools/: codal.cmake  yotta.cmake
Firmware/Microbit_v2/utils/cmake/toolchains/ARM_GCC/: bin-generator.cmake  compiler-flags.cmake  platform_includes.h  toolchain.cmake
Firmware/Microbit_v2/utils/cmake/toolchains/AVR_GCC/: bin-generator.cmake  compiler-flags.cmake  hex-generator.cmake  platform_includes.h  toolchain.cmake
Firmware/Microbit_v2/utils/cmake/toolchains/XTENSA_GCC/: bin-generator.cmake  compiler-flags.cmake  hex-generator.cmake  toolchain.cmake
Firmware/Microbit_v2/utils/debug/: dmesg.js  meminfo.js
Firmware/Microbit_v2/utils/python/: codal_utils.py
Firmware/Microbit_v2/utils/python/doc_gen/: doc_gen.py  doxygen_extractor.py  md_converter.py  system_utils.py
Firmware/offline-finding/: Makefile  main.c
OpenHaystack/: .clang-format  .swift-format  .swiftlint.yml  OpenHaystack-Bridging-Header.h
OpenHaystack/OpenHaystack/: AnisetteDataManager.swift  AppDelegate.swift  Info.plist  MapViewController.swift  OpenHaystackApp.swift  SavePanel.swift
OpenHaystack/OpenHaystack.xcodeproj/: project.pbxproj
OpenHaystack/OpenHaystack/Base.lproj/: Main.storyboard
OpenHaystack/OpenHaystack/BoringSSL/: BoringSSL.h  BoringSSL.m
OpenHaystack/OpenHaystack/FindMy/: DecryptReports.swift  FindMyController.swift  FindMyKeyDecoder.swift  Models.swift
OpenHaystack/OpenHaystack/HaystackApp/: AccessoryController.swift  AccessoryNearbyMonitor.swift  DataToHexExtension.swift  ESP32Controller.swift  FileManager.swift  KeychainController.swift  MicrobitController.swift  NRFController.swift  UpdateCheckController.swift
OpenHaystack/OpenHaystack/OFFetchReports/: MapView.swift  OFFetchReportsMainView.swift
OpenHaystack/OpenHaystack/ReportsFetcher/: ReportsFetcher.h  ReportsFetcher.m
OpenHaystack/OpenHaystackMail/: ALTAnisetteData.h  ALTAnisetteData.m  AppleAccountData.h  AppleAccountData.m  Info.plist  OpenHaystackPluginService.h  OpenHaystackPluginService.m
OpenHaystack/OpenHaystackTests/: BluetoothTests.swift  MicrocontrollerTests.swift  OpenHaystackTests.swift  UpdateCheckTests.swift  sampleKeys.plist
OpenHaystack/Resources/: codesign_offline_finder.sh
Resources/Icon/: OpenHaystackIcon.graffle  create_appicon.py
openhaystack-mobile/: README.md  pubspec.yaml
openhaystack-mobile/android/: build.gradle
openhaystack-mobile/android/app/: build.gradle
openhaystack-mobile/ios/Runner/: Info.plist
openhaystack-mobile/ios/Runner.xcodeproj/: project.pbxproj
openhaystack-mobile/ios/ShareExtension/: Info.plist  ShareExtension.entitlements  ShareViewController.swift
openhaystack-mobile/lib/: main.dart  splashscreen.dart
openhaystack-mobile/lib/accessory/: accessory_color_selector.dart  accessory_detail.dart  accessory_dto.dart  accessory_icon.dart  accessory_icon_model.dart  accessory_icon_selector.dart  accessory_list.dart  accessory_list_item.dart  accessory_list_item_placeholder.dart  accessory_model.dart  accessory_registry.dart  accessory_storage.dart  no_accessories.dart
openhaystack-mobile/lib/dashboard/: accessory_map_list_vert.dart  dashboard_desktop.dart  dashboard_mobile.dart
openhaystack-mobile/lib/deployment/: code_block.dart  deployment_details.dart  deployment_email.dart  deployment_esp32.dart  deployment_instructions.dart  deployment_linux_hci.dart  deployment_nrf51.dart  hyperlink.dart
openhaystack-mobile/lib/findMy/: decrypt_reports.dart  find_my_controller.dart  models.dart  reports_fetcher.dart
openhaystack-mobile/lib/history/: accessory_history.dart  days_selection_slider.dart  location_popup.dart
openhaystack-mobile/lib/item_management/: accessory_color_input.dart  accessory_icon_input.dart  accessory_id_input.dart  accessory_name_input.dart  accessory_pk_input.dart  item_creation.dart  item_export.dart  item_file_import.dart  item_import.dart  item_management.dart  item_management_desktop.dart  loading_spinner.dart  new_item_action.dart
openhaystack-mobile/lib/location/: location_model.dart
openhaystack-mobile/lib/map/: map.dart
openhaystack-mobile/lib/placeholder/: avatar_placeholder.dart  text_placeholder.dart
openhaystack-mobile/lib/preferences/: preferences_page.dart  user_preferences_model.dart
openhaystack-mobile/linux/: CMakeLists.txt  my_application.cc
openhaystack-mobile/test/: widget_test.dart
openhaystack-mobile/web/: index.html  manifest.json
openhaystack-mobile/windows/: CMakeLists.txt
(+70 files in other folders)
